# synqclient

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  Doxyfile  README.md  synqclient.pro
ci/: build-and-test-cmake.sh  build-and-test-static-cmake.sh  build-and-test-static.sh  build-and-test.sh  build-using-pri.sh  cppcheck.sh  doxygen.sh
ci/pri-test-data/: main.cpp  test.pro
cmake/: SynqClientConfig.cmake
doc/: .gitignore  api.rst  conf.py  dropbox.rst  index.rst  introduction.rst  jobs.rst  sync.rst  utils.rst  webdav.rst
docker/fedora/: Dockerfile
libsynqclient/: CMakeLists.txt  libsynqclient.pri  libsynqclient.pro
libsynqclient/inc/: AbstractJobFactory  CompositeJob  DirectorySynchronizer  FileInfo  GetFileInfoJob  ListFilesJob  NextCloudLoginFlow  SyncStateEntry  WebDAVCreateDirectoryJob  WebDAVDownloadFileJob  WebDAVGetFileInfoJob  WebDAVJobFactory  WebDAVListFilesJob  WebDAVUploadFileJob  abstractjob.h  abstractjobfactory.h  abstractwebdavjob.h  createdirectoryjob.h  deletejob.h  directorysynchronizer.h  downloadfilejob.h  fileinfo.h  getfileinfojob.h  jsonsyncstatedatabase.h  libsynqclient.h  libsynqclient_global.h  listfilesjob.h  nextcloudloginflow.h  sqlsyncstatedatabase.h  syncstatedatabase.h  syncstateentry.h  uploadfilejob.h  webdavcreatedirectoryjob.h  webdavdeletejob.h  webdavdownloadfilejob.h  webdavgetfileinfojob.h  webdavjobfactory.h  webdavlistfilesjob.h  webdavuploadfilejob.h
libsynqclient/inc/SynqClient/: AbstractDropboxJob  AbstractJob  AbstractWebDAVJob  CreateDirectoryJob  DeleteJob  DownloadFileJob  DropboxCreateDirectoryJob  DropboxDeleteJob  DropboxDownloadFileJob  DropboxGetFileInfoJob  DropboxJobFactory  DropboxListFilesJob  DropboxUploadFileJob  JSONSyncStateDatabase  SQLSyncStateDatabase  SyncStateDatabase  SynqClient  UploadFileJob  WebDAVDeleteJob  abstractdropboxjob.h  abstractjob.h  abstractjobfactory.h  abstractwebdavjob.h  compositejob.h  createdirectoryjob.h  deletejob.h  directorysynchronizer.h  dropboxcreatedirectoryjob.h  dropboxdeletejob.h  dropboxdownloadfilejob.h  dropboxgetfileinfojob.h  dropboxjobfactory.h  dropboxlistfilesjob.h  dropboxuploadfilejob.h  fileinfo.h  getfileinfojob.h  jsonsyncstatedatabase.h  libsynqclient.h  libsynqclient_global.h  listfilesjob.h  (+9 more)
libsynqclient/src/: abstractdropboxjob.cpp  abstractdropboxjobprivate.cpp  abstractdropboxjobprivate.h  abstractjob.cpp  abstractjobfactory.cpp  abstractjobfactoryprivate.cpp  abstractjobfactoryprivate.h  abstractjobprivate.cpp  abstractjobprivate.h  abstractwebdavjob.cpp  abstractwebdavjobprivate.cpp  abstractwebdavjobprivate.h  changetree.h  compositejob.cpp  compositejobprivate.cpp  compositejobprivate.h  createdirectoryjob.cpp  createdirectoryjobprivate.cpp  createdirectoryjobprivate.h  deletejob.cpp  deletejobprivate.cpp  deletejobprivate.h  directorysynchronizer.cpp  directorysynchronizerprivate.cpp  directorysynchronizerprivate.h  downloadfilejob.cpp  downloadfilejobprivate.cpp  downloadfilejobprivate.h  dropboxcreatedirectoryjob.cpp  dropboxcreatedirectoryjobprivate.cpp  dropboxcreatedirectoryjobprivate.h  dropboxdeletejob.cpp  dropboxdeletejobprivate.cpp  dropboxdeletejobprivate.h  dropboxdownloadfilejob.cpp  dropboxdownloadfilejobprivate.cpp  dropboxdownloadfilejobprivate.h  dropboxgetfileinfojob.cpp  dropboxgetfileinfojobprivate.cpp  dropboxgetfileinfojobprivate.h  (+59 more)
model/: classdiagram.qmodel
tests/: CMakeLists.txt  test.pri  tests.pro
tests/abstractjob/: CMakeLists.txt  abstractjob.pro  tst_abstractjob.cpp
tests/cmake-install-test/: CMakeLists.txt  main.cpp
tests/compositejob/: CMakeLists.txt  compositejob.pro  tst_compositejob.cpp
tests/directorysynchronizer/: CMakeLists.txt  directorysynchronizer.pro  tst_directorysynchronizer.cpp
tests/dropboxcreatedirectoryjob/: CMakeLists.txt  dropboxcreatedirectoryjob.pro  tst_dropboxcreatedirectoryjob.cpp
tests/dropboxdeletejob/: CMakeLists.txt  dropboxdeletejob.pro  tst_dropboxdeletejob.cpp
tests/dropboxdownloadfilejob/: CMakeLists.txt  dropboxdownloadfilejob.pro  tst_dropboxdownloadfilejob.cpp
tests/dropboxgetfileinfojob/: CMakeLists.txt  dropboxgetfileinfojob.pro  tst_dropboxgetfileinfojob.cpp
tests/dropboxjobfactory/: CMakeLists.txt  dropboxjobfactory.pro  tst_dropboxjobfactory.cpp
tests/dropboxlistfilesjob/: CMakeLists.txt  dropboxlistfilesjob.pro  tst_dropboxlistfilesjob.cpp
tests/dropboxuploadfilejob/: CMakeLists.txt  dropboxuploadfilejob.pro  tst_dropboxuploadfilejob.cpp
tests/shared/: utils.cpp  utils.h
tests/syncstatedatabase/: CMakeLists.txt  syncstatedatabase.pro  tst_syncstatedatabase.cpp
tests/webdavcreatedirectoryjob/: CMakeLists.txt  tst_webdavcreatedirectoryjob.cpp  webdavcreatedirectoryjob.pro
tests/webdavdeletejob/: CMakeLists.txt  tst_webdavdeletejob.cpp  webdavdeletejob.pro
tests/webdavdownloadfilejob/: CMakeLists.txt  tst_webdavdownloadfilejob.cpp  webdavdownloadfilejob.pro
tests/webdavgetfileinfojob/: CMakeLists.txt  tst_webdavgetfileinfojob.cpp  webdavgetfileinfojob.pro
tests/webdavjobfactory/: CMakeLists.txt  tst_webdavjobfactory.cpp  webdavjobfactory.pro
tests/webdavlistfilesjob/: CMakeLists.txt  tst_webdavlistfilesjob.cpp  webdavlistfilesjob.pro
tests/webdavuploadfilejob/: CMakeLists.txt  tst_webdavuploadfilejob.cpp  webdavuploadfilejob.pro
utils/: mk-class.py  mk-unit-test.py
