set(SYNQCLIENT_SOURCES
    src/abstractjob.cpp
    src/abstractjobfactory.cpp
    src/abstractjobfactoryprivate.cpp
    src/abstractjobprivate.cpp
    src/abstractwebdavjob.cpp
    src/abstractwebdavjobprivate.cpp
    src/compositejob.cpp
    src/compositejobprivate.cpp
    src/createdirectoryjob.cpp
    src/createdirectoryjobprivate.cpp
    src/deletejob.cpp
    src/deletejobprivate.cpp
    src/directorysynchronizer.cpp
    src/directorysynchronizerprivate.cpp
    src/downloadfilejob.cpp
    src/downloadfilejobprivate.cpp
    src/fileinfo.cpp
    src/fileinfoprivate.cpp
    src/getfileinfojob.cpp
    src/getfileinfojobprivate.cpp
    src/jsonsyncstatedatabase.cpp
    src/jsonsyncstatedatabaseprivate.cpp
    src/libsynqclient.cpp
    src/listfilesjob.cpp
    src/listfilesjobprivate.cpp
    src/nextcloudloginflow.cpp
    src/nextcloudloginflowprivate.cpp
    src/sqlsyncstatedatabase.cpp
    src/sqlsyncstatedatabaseprivate.cpp
    src/syncstatedatabase.cpp
    src/syncstatedatabaseprivate.cpp
    src/syncstateentry.cpp
    src/syncstateentryprivate.cpp
    src/uploadfilejob.cpp
    src/uploadfilejobprivate.cpp
    src/webdavcreatedirectoryjob.cpp
    src/webdavcreatedirectoryjobprivate.cpp
    src/webdavdeletejob.cpp
    src/webdavdeletejobprivate.cpp
    src/webdavdownloadfilejob.cpp
    src/webdavdownloadfilejobprivate.cpp
    src/webdavgetfileinfojob.cpp
    src/webdavgetfileinfojobprivate.cpp
    src/webdavjobfactory.cpp
    src/webdavjobfactoryprivate.cpp
    src/webdavlistfilesjob.cpp
    src/webdavlistfilesjobprivate.cpp
    src/webdavuploadfilejob.cpp
    src/webdavuploadfilejobprivate.cpp
)

set(SYNQCLIENT_HEADERS
    inc/AbstractJob
    inc/AbstractJobFactory
    inc/AbstractWebDAVJob
    inc/CompositeJob
    inc/CreateDirectoryJob
    inc/DeleteJob
    inc/DirectorySynchronizer
    inc/DownloadFileJob
    inc/FileInfo
    inc/GetFileInfoJob
    inc/JSONSyncStateDatabase
    inc/ListFilesJob
    inc/NextCloudLoginFlow
    inc/SQLSyncStateDatabase
    inc/SyncStateDatabase
    inc/SyncStateEntry
    inc/UploadFileJob
    inc/WebDAVCreateDirectoryJob
    inc/WebDAVDeleteJob
    inc/WebDAVDownloadFileJob
    inc/WebDAVGetFileInfoJob
    inc/WebDAVJobFactory
    inc/WebDAVListFilesJob
    inc/WebDAVUploadFileJob
    inc/abstractjob.h
    inc/abstractjobfactory.h
    inc/abstractwebdavjob.h
    inc/compositejob.h
    inc/createdirectoryjob.h
    inc/deletejob.h
    inc/directorysynchronizer.h
    inc/downloadfilejob.h
    inc/fileinfo.h
    inc/getfileinfojob.h
    inc/jsonsyncstatedatabase.h
    inc/libsynqclient_global.h
    inc/libsynqclient.h
    inc/listfilesjob.h
    inc/nextcloudloginflow.h
    inc/sqlsyncstatedatabase.h
    inc/syncstatedatabase.h
    inc/syncstateentry.h
    inc/uploadfilejob.h
    inc/webdavcreatedirectoryjob.h
    inc/webdavdeletejob.h
    inc/webdavdownloadfilejob.h
    inc/webdavgetfileinfojob.h
    inc/webdavjobfactory.h
    inc/webdavlistfilesjob.h
    inc/webdavuploadfilejob.h
    src/abstractjobfactoryprivate.h
    src/abstractjobprivate.h
    src/abstractwebdavjobprivate.h
    inc/SynqClient
    src/changetree.h
    src/compositejobprivate.h
    src/createdirectoryjobprivate.h
    src/deletejobprivate.h
    src/directorysynchronizerprivate.h
    src/downloadfilejobprivate.h
    src/fileinfoprivate.h
    src/getfileinfojobprivate.h
    src/jsonsyncstatedatabaseprivate.h
    src/listfilesjobprivate.h
    src/nextcloudloginflowprivate.h
    src/sqlsyncstatedatabaseprivate.h
    src/syncactions.h
    src/syncstatedatabaseprivate.h
    src/syncstateentryprivate.h
    src/uploadfilejobprivate.h
    src/webdavcreatedirectoryjobprivate.h
    src/webdavdeletejobprivate.h
    src/webdavdownloadfilejobprivate.h
    src/webdavgetfileinfojobprivate.h
    src/webdavjobfactoryprivate.h
    src/webdavlistfilesjobprivate.h
    src/webdavuploadfilejobprivate.h
)

add_library(synqclient)
target_sources(
    synqclient 
    PRIVATE 
        ${SYNQCLIENT_SOURCES}
        ${SYNQCLIENT_HEADERS}
)
target_link_libraries(
    synqclient 
    PUBLIC 
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Xml
        Qt${QT_VERSION_MAJOR}::Sql
)
target_include_directories(
    synqclient
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc/>
        $<INSTALL_INTERFACE:include>
)
set_target_properties(
    synqclient
    PROPERTIES
        CXX_VISIBILITY_PRESET hidden
        SOVERSION ${SYNQCLIENT_VERSION}
)
target_compile_definitions(
    synqclient
    PRIVATE
        LIBSYNQCLIENT_LIBRARY

    PUBLIC
        # Request export of symbols only if we don't build a static library
        $<IF:$<STREQUAL:$<TARGET_PROPERTY:synqclient,TYPE>,STATIC_LIBRARY>,LIBSYNQCLIENT_LIBRARY_STATIC,LIBSYNQCLIENT_LIBRARY_SHARED>
)
target_compile_features(
    synqclient
    PUBLIC
        cxx_std_14
)

install(
    TARGETS
        synqclient
    EXPORT
        SynqClientTargets
    LIBRARY DESTINATION
        ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION
        ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION
        ${CMAKE_INSTALL_BINDIR}
    INCLUDES DESTINATION
        ${CMAKE_INSTALL_INCLUDEDIR}
)
install(
    DIRECTORY
        inc/
    DESTINATION
        ${CMAKE_INSTALL_INCLUDEDIR}/SynqClient
)
